// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasPathParam Error if duplicate path parameters with same name are used 1`] = `
Array [
  Object {
    "message": "The path \\"**/foo/{bar}/{bar}**\\" uses the parameter \\"**{bar}**\\" multiple times.

Path parameters must be unique.

To fix, update the path so that all parameter names are unique.",
    "name": "path-params",
    "path": Array [
      "paths",
      "/foo/{bar}/{bar}",
    ],
    "severity": 50,
    "severityLabel": "error",
    "summary": "Path parameters are correct and valid.",
  },
]
`;

exports[`oasPathParam Error if no path parameter definition 1`] = `
Array [
  Object {
    "message": "The path \\"**/foo/{bar}**\\" uses a parameter \\"**{bar}**\\" that does not have a corresponding definition.

To fix, add a path parameter with the name \\"**bar**\\".",
    "name": "path-params",
    "path": Array [
      "paths",
      "/foo/{bar}",
    ],
    "severity": 50,
    "severityLabel": "error",
    "summary": "Path parameters are correct and valid.",
  },
]
`;

exports[`oasPathParam Error if path parameter definition is not required 1`] = `
Array [
  Object {
    "message": "Path parameter \\"**bar**\\" must have a \`required\` that is set to \`true\`.

To fix, mark this parameter as required.",
    "name": "path-params",
    "path": Array [
      "paths",
      "/foo/{bar}",
      "parameters",
    ],
    "severity": 50,
    "severityLabel": "error",
    "summary": "Path parameters are correct and valid.",
  },
]
`;

exports[`oasPathParam Error if paths are functionally equivalent 1`] = `
Array [
  Object {
    "message": "The paths \\"**/foo/{boo}**\\" and \\"**/foo/{bar}**\\" are equivalent.

To fix, remove one of the paths or merge them together.",
    "name": "path-params",
    "path": Array [
      "paths",
    ],
    "severity": 50,
    "severityLabel": "error",
    "summary": "Path parameters are correct and valid.",
  },
]
`;
